// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Content Content 1`] = `
<main>
  <header
    className="navbar"
  >
    <div
      className="navbar-brand"
    >
      <a
        className="navbar-item"
        href="#"
      >
        global
      </a>
      <div
        className="navbar-burger burger"
        data-target="navMenu"
        onClick={[Function]}
      >
        <span />
        <span />
        <span />
      </div>
    </div>
    <div
      className="navbar-menu"
      id="navMenu"
    >
      <div
        className="navbar-end"
      >
        <a
          className="navbar-item"
          href="#/blog/"
        >
          blog
        </a>
        <a
          className="navbar-item"
          href="#/profile/"
        >
          profile
        </a>
        <a
          className="navbar-item"
          href="#/slides/"
        >
          slides
        </a>
      </div>
    </div>
  </header>
  <section
    className="hero is-primary"
  >
    <div
      className="hero-body"
    >
      <div
        className="container"
      >
        <h1
          className="title"
        >
          Hero title
        </h1>
        <h2
          className="subtitle"
        >
          Hero subtitle
        </h2>
      </div>
    </div>
  </section>
</main>
`;

exports[`Storyshots Content Header 1`] = `
<header
  className="navbar"
>
  <div
    className="navbar-brand"
  >
    <a
      className="navbar-item"
      href="#"
    >
      Swedish Krona
    </a>
    <div
      className="navbar-burger burger"
      data-target="navMenu"
      onClick={[Function]}
    >
      <span />
      <span />
      <span />
    </div>
  </div>
  <div
    className="navbar-menu"
    id="navMenu"
  >
    <div
      className="navbar-end"
    >
      <a
        className="navbar-item"
        href="#/blog/"
      >
        blog
      </a>
      <a
        className="navbar-item"
        href="#/profile/"
      >
        profile
      </a>
      <a
        className="navbar-item"
        href="#/slides/"
      >
        slides
      </a>
    </div>
  </div>
</header>
`;
